scrollbar width fix

--- a/src/Client/wwwroot/css/loader.css
+++ b/src/Client/wwwroot/css/loader.css
@@ -67,3 +67,7 @@
         transform: scale(1);
     }
 }
+
+::-webkit-scrollbar {
+    width: 2px!important;
+}
